# proc-macro-issue-minimal-example

./: Cargo.toml
src/: lib.rs
tests/: 01-shoud-add-struct-field.rs  02-parse-attributes.rs
