[package]
name = "proc-macro-issue-minimal-example"
version = "0.1.0"
authors = ["Mathis EON <eon@abes.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

quote = "1.0.7"
syn = {version = "1.0.52", features = ["extra-traits", "parsing"]}